--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -22,6 +23,7 @@
     "axios": "^0.26.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "^45.0.1",
+    "expo-linking": "~3.1.0",
     "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
     "jwt-decode": "^3.1.2",
@@ -52,10 +54,9 @@
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "yup": "^0.32.11",
-    "yup-phone": "^1.3.2",
     "webpack-dev-server": "~3.11.0",
-    "@expo/webpack-config": "~0.16.2"
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
